k8/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-deployment
  namespace: chat-app-ns
  labels:
    app: chat-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat-app
  template:
    metadata:
      labels:
        app: chat-app
    spec:
      containers:
      - name: chat-app-frontend
        image: alokmishra773/chat-app-frontend:latest
        ports:
        - containerPort: 80
