k8/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
 name: chat-app-service
 namespace: chat-app-ns

spec:
 selector:
  app: chat-app
 
 ports:
   - protocol: TCP
     port: 2001 # cluster/servie ip address  
     targetPort: 3001   # ip address of the container
