k8/frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: chat-app-frontend
 namespace: chat-app-ns

spec:
 rules:
 - http:
    paths:
    - pathType: Prefix
      path: /
      backend:
       service:
        name: chat-app-service
        port:
          number: 2001 #service port number not the container port number
